@@ -1,19 +1,28 @@
 --- #YAML:1.0
-name:                Text-CSV_XS
-version:             0.41
-abstract:            Comma-Separated Values manipulation routines
-license:             perl
+name:              Text-CSV_XS
+version:           0.42
+abstract:          Comma-Separated Values manipulation routines
+license:           perl
 author:              
     - H.Merijn Brand <h.merijn@xs4all.nl>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
+generated_by:      Author
+distribution_type: module
+provides:
+    Text::CSV_XS:
+        file:      CSV_XS.pm
+        version:   0.42
 requires:     
-    perl:                      5.005
-    Config:                        0
-    DynaLoader:                    0
-    IO::Handle:                    0
-    Test::Harness:                 0
-    Test::More:                    0
+    perl:          5.005
+    DynaLoader:    0
+    IO::Handle:    0
+build_requires:
+    perl:          5.005
+    Config:        0
+    Test::Harness: 0
+    Test::More:    0
+    Tie::Scalar:   0
+resources:
+    license:       http://dev.perl.org/licenses/
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:           http://module-build.sourceforge.net/META-spec-v1.3.html
+    version:       1.3
